--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      src="https://cdn.tiny.cloud/1/m60ptnnd82affrzam6d8y0w947f6ji628xdtqw4y07bqkqya/tinymce/6/tinymce.min.js"
+      referrerpolicy="origin"
+    ></script>
     <title>React App</title>
   </head>
   <body>
